--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(VERSION_STRING "v${VERSION}")
 option(BUILD_TESTS "Build tests" OFF)
 add_library(proxy STATIC proxy.h proxy.cpp)
 target_link_libraries(proxy)
-add_executable(proxy main.cpp)
+add_executable(result main.cpp)
 if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(third-party/gtest)
