--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(VERSION_TWEAK 0)
 set(VERSION\${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${VERSION_TWEAK})
 set(VERSION_STRING "v${VERSION}")
 option(BUILD_TESTS "Build tests" OFF)
+include_directories(.)
 add_library(proxy STATIC proxy.h proxy.cpp)
 add_executable(result main.cpp)
 target_link_libraries(proxy)
